syntax = "proto3";

service MLService {
  rpc GetProcessingStatus(Token) returns (ProcessingStatus);
  rpc UploadRawData(RawDataRequest) returns (UploadResponse);
}

message Token {
  string value = 1;
}

message RawDataRequest {
  string file = 1;
  repeated string base64Files = 2;
}

message UploadResponse {
  string message = 1;
}

message ProcessingStatus {
  string status = 1;
  // Add more fields for detailed status
}
